--- a/WebApp/Views/Job/Index.cshtml
+++ b/WebApp/Views/Job/Index.cshtml
@@ -29,7 +29,7 @@
         string.IsNullOrEmpty(filterByStatusType) && 
         string.IsNullOrEmpty(filterByWorkSetup);
 
-    string sortByCreatedDate = sortBy == "created" ? "created_desc" : "created";
+    string sortByCreatedDate = sortBy == "created_asc" ? "created_desc" : "created_asc";
 }
 
 <div class="nav-header flex items-center justify-between">
