--- a/WebApp/Views/Job/_JobTableHeader.cshtml
+++ b/WebApp/Views/Job/_JobTableHeader.cshtml
@@ -22,7 +22,7 @@
 
     string aspAction = User.IsInRole("Recruiter") ? "GetAllJobsRecruiter" : "GetAllJobsAdmin";
 
-    string sortByCreatedDate = sortBy == "created" ? "created_desc" : "created";
+    string sortByCreatedDate = sortBy == "created_asc" ? "created_desc" : "created_asc";
 }
 
 <tr>
@@ -207,7 +207,7 @@
            asp-route-filterByWorkSetup="@filterByWorkSetup"
            class="text-black hover:text-blue-500">
             @Html.DisplayNameFor(model => model.First().CreatedDate)
-            @(sortBy == "created" ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "created_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
+            @(sortBy == "created_asc" ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "created_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
         </a>
     </th>
     <th class="px-6 py-3"></th>
