--- a/WebApp/Views/Job/ViewJob.cshtml
+++ b/WebApp/Views/Job/ViewJob.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Services.ServiceModels.JobViewModel
 @using Data.Models;
+@using Humanizer;
+
 
 @{
     ViewData["Title"] = Model.Title;
@@ -22,37 +24,52 @@
             <div class="bg-white w-full px-12 p-6 rounded-lg shadow-sm">
                 <div class="flex justify-between">
                     <!-- Back Button with Arrow -->
-                    <button class="flex items-center text-red-600 hover:text-blue-700 pb-3" onclick="goBack()">
+                    <button class="flex items-center font-semibold text-xs text-[#7A1515] hover-[#991b1b]" onclick="goBack()">
                         <i class="fas fa-arrow-left mr-2"></i> Back
-                    </button>
+                    </button>                      
+                </div>
 
-                    <!-- Action Buttons -->
-                    <div>
+                <div class="flex justify-between">
+                    <div class="text-[40px] font-bold">@Model.Title</div>
+
+                    <!-- Action Buttons Placeholders Only-->
+                    <div class="flex justify-between p-2 space-x-4">
                         @if (User.IsInRole("Applicant"))
                         {
-                            <button onclick="applyJobHandler('@Model.JobId')" class="btn-primary">
-                                <i class="fa-regular fa-paper-plane"></i> Apply
-                            </button>
-                            <button onclick="saveJobHandler('@Model.JobId')" class="border text-gray-900 hover:text-gray-700 transition-colors px-2">
+                            <!-- Save -->
+                            <button onclick="saveJobHandler('@Model.JobId')"
+                                    class="btn-primary py-2 px-4 rounded-lg flex items-center justify-center transition-all hover:bg-[#991b1b] hover:text-white">
                                 <i class="fa-regular fa-bookmark"></i>
+                            </button>
+
+                            <!-- Apply -->
+                            <button onclick="applyJobHandler('@Model.JobId')"
+                                    class="btn-primary py-2 px-4 rounded-lg flex items-center justify-center transition-all hover:bg-[#991b1b] hover:text-white">
+                                <i class="fa-regular fa-paper-plane pr-1"></i> Apply
                             </button>
                         }
                         else if (User.IsInRole("Recruiter") && string.Equals(userId, Model.PostedById))
                         {
-                            <button onclick="editJobHandler('@Model.JobId')" class="border text-gray-900 hover:text-gray-700 transition-colors px-2">
+                            <!-- Edit -->
+                            <button onclick="editJobHandler('@Model.JobId')"
+                                    class="text-gray-900 hover:text-gray-700 transition-all px-4 py-2 rounded-lg flex items-center">
                                 <i class="fas fa-edit"></i> Edit
                             </button>
                         }
-                    </div>                   
+                    </div>
                 </div>
-                <div class="text-[40px] font-bold flex-1">@Model.Title</div>
 
                 <!-- Second Row: Company Name and Date Posted -->
-                <div class="w-full mt-2 text-sm text-gray-600">
+                <div class="w-full text-sm text-gray-700">
                    <div class="">
-                      <span>@Model.Company.Name | Posted by: @Model.PostedBy.User?.FirstName</span>
+                      <span>
+                            @Model.PostedBy.User?.FirstName - @Model.Company.Name 
+                      </span>
+
                        <!-- Date Created -->
-                      <div class="text-sm text-gray-500"> Date Created: @Model.CreatedDate</div>
+                      <div class="text-xs text-gray-500"> Posted
+                            @(Model.CreatedDate == DateTime.MinValue ? "Date Not Available" : Model.CreatedDate.ToUniversalTime().Humanize())
+                      </div>
                    </div>
                 </div>          
             </div>
@@ -72,11 +89,18 @@
                     <div class="bg-white rounded-xl border p-4">
                           <h3 class="mb-4 text-xl font-bold">Skills Required</h3>
                           <p>@string.Join(", ", (Model.Skills as List<Skill>).Select(skill => skill.Name))</p>
+
+                        <!--Skill Placeholder Only-->
+                        <div class="mb-1 flex flex-wrap space-x-3">
+                            <span class="rounded-full outline outline-offset-1 outline-[#7A1515] px-2 py-1 text-xs">Skill 1</span>
+                            <span class="rounded-full outline outline-offset-1 outline-[#7A1515] px-2 py-1 text-xs">Skill 2</span>
+                            <span class="rounded-full outline outline-offset-1 outline-[#7A1515] px-2 py-1 text-xs">Skill 3</span>
+                        </div>
                     </div>
                  </div>
 
                  <div class="p-1 bg-gray-100 rounded-xl shadow-md hover:shadow-lg transition-shadow duration-300">   
-                <!-- Job Overview -->
+                <!-- About the Job -->
                     <div class="bg-white rounded-xl border p-4">
                          <h3 class="mb-4 text-xl font-bold">About the Job</h3>
                          <p class="whitespace-pre-wrap text-base text-gray-600">@Model.Description</p>
