--- a/WebApp/Views/Job/_JobTableHeader.cshtml
+++ b/WebApp/Views/Job/_JobTableHeader.cshtml
@@ -25,15 +25,17 @@
     string sortByCreatedDate = sortBy == "created_asc" ? "created_desc" : "created_asc";
 }
 
+
+
 <tr>
-    <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
+    <th class="px-6 py-3 text-xs font-medium uppercase tracking-wider text-gray-900">
         @Html.DisplayNameFor(model => model.First().Title)
     </th>
 
     @if (!User.IsInRole("Recruiter"))
     {   
         <!-- Company Column (with dropdown) -->
-        <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
+        <th class="px-6 py-3 text-sm font-medium uppercase tracking-wider text-gray-900">
             <div class="dropdown relative">
                 <a class="cursor-pointer text-black hover:text-blue-500" href="#" id="companyDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     @if (filterByCompany == null)
@@ -46,6 +48,7 @@
                     }
                     <i class="fa-solid fa-chevron-down"></i>
                 </a>
+
                 <div class="dropdown-menu absolute hidden pt-1 text-gray-700" aria-labelledby="companyDropdown">
                     <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100"
                        asp-action="@aspAction"
@@ -68,15 +71,15 @@
     }
     else
     {
-        <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
+        <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider">
             @Html.DisplayNameFor(model => model.First().AvailableSlots)
         </th>
     }
 
     <!-- Employment Type Column (with dropdown) -->
-    <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
+    <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider">
         <div class="dropdown relative">
-            <a class="cursor-pointer text-black hover:text-blue-500" href="#" id="employmentTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="cursor-pointer text-gray-900 hover:text-blue-500" href="#" id="employmentTypeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 @if (string.IsNullOrEmpty(filterByEmploymentType))
                 {
                     @Html.DisplayNameFor(model => model.First().EmploymentType)
@@ -87,7 +90,7 @@
                 }
                 <i class="fa-solid fa-chevron-down"></i>
             </a>
-            <div class="dropdown-menu absolute hidden pt-1 text-gray-700" aria-labelledby="employmentTypeDropdown">
+            <div class="dropdown-menu absolute hidden pt-1" aria-labelledby="employmentTypeDropdown">
                 <a class="dropdown-item block px-4 py-2 text-sm hover:bg-gray-100"
                    asp-action="@aspAction"
                    asp-route-sortBy="@sortBy"
@@ -197,7 +200,7 @@
     </th>
 
     <!-- CreatedDate Column (sortable) -->
-    <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider text-gray-500">
+    <th class="px-6 py-3 text-left text-xs font-medium uppercase tracking-wider">
         <a asp-action="@aspAction"
            asp-route-sortBy="@sortByCreatedDate"
            asp-route-search="@search"
@@ -210,5 +213,6 @@
             @(sortBy == "created_asc" ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : (sortBy == "created_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
         </a>
     </th>
-    <th class="px-6 py-3"></th>
+    <!-- Actiion-->
+    <th class="px-6 py-3 text-left text-xs font-medium uppercase">Action</th>
 </tr>
