--- a/WebApp/Views/Job/Index.cshtml
+++ b/WebApp/Views/Job/Index.cshtml
@@ -29,11 +29,10 @@
                 <!-- Search and Add Job Button -->
                 <div class="flex items-center pb-8 space-x-2">
                     <div class="flex items-center space-x-2">
-                        <input type="text"
-                               class="border border-gray-300 rounded-md p-2 w-full"
-                               placeholder="Search by name or email"
-                               value="@search"
-                               onkeyup="debounceSearch(this.value)" />
+                        <form method="get" asp-action="@aspAction" asp-route-sortBy="@sortBy" asp-route-search="@search" class="flex items-center">
+                            @await Component.InvokeAsync("SearchInput", new { searchValue = search, placeholder = "Name, contact, address" })
+                            <input type="hidden" name="sortBy" value="@sortBy" />
+                        </form>
                     </div>
                     <div class="flex items-center space-x-2">
                         <button type="button"
