--- a/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/WebApp/Views/Shared/_Sidebar.cshtml
@@ -72,14 +72,14 @@
         }
         @if (isRecruiter)
         {
-            <li class="bg-[#F5F7F8] py-2">
-                <a asp-action="" asp-controller=""
-                   class="flex items-center rounded px-2 py-1 text-[#7A1515]
-                   hover:text-[#991b1b] hover:bg-gray-200 transition duration-200">
-                    <i class="fa fa-building mr-2"></i>
-                    Company
-                </a>
-            </li>
+                <li class="bg-[#F5F7F8] py-2">
+        <a asp-action="GetRecruiterCompany" asp-controller="Company"
+           class="flex items-center rounded px-2 py-1 text-[#7A1515]
+       hover:text-[#991b1b] hover:bg-gray-200 transition duration-200">
+            <i class="fa fa-building mr-2"></i>
+            Company
+        </a>
+    </li>
             <li class="bg-[#F5F7F8] py-2">
                 <a asp-action="GetAllJobsRecruiter" asp-controller="Job"
                    class="flex items-center rounded px-2 py-1 text-[#7A1515]
